added bme sensor data to model, added possibility to change data by appendix

--- a/e_nose/scripts/Visualizer.ipynb
+++ b/e_nose/scripts/Visualizer.ipynb
@@ -895,7 +895,11 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "ename": "NameError",
@@ -948,189 +952,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# PCA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_the_data_array = None\n",
-    "all_variances = None\n",
-    "\n",
-    "count = 0\n",
-    "\n",
-    "for ts in measurements:\n",
-    "    if all_the_data_array is None:\n",
-    "        all_the_data_array = measurements[ts]['data']\n",
-    "    else: \n",
-    "        all_the_data_array = np.vstack((all_the_data_array, measurements[ts]['data']))\n",
-    "        \n",
-    "    #do PCA for every single measurement\n",
-    "    pca_single = PCA(15)\n",
-    "    pca_single.fit_transform(measurements[ts]['data'])\n",
-    "    explained_variance = pca_single.explained_variance_ratio_\n",
-    "    count += 1\n",
-    "    if all_variances is None:\n",
-    "        all_variances = explained_variance\n",
-    "    else:\n",
-    "        all_variances = np.vstack((all_variances, explained_variance))\n",
-    "        \n",
-    "\n",
-    "var=np.cumsum(np.round(np.mean(all_variances,axis=0), decimals=3)*100)\n",
-    "plt.ylabel('% Variance Explained')\n",
-    "plt.xlabel('# of Features')\n",
-    "\n",
-    "plt.title('PCA Analysis')\n",
-    "plt.ylim(70,100.5)\n",
-    "\n",
-    "plt.xticks(range(15))\n",
-    "\n",
-    "plt.plot(var, label='averaged')\n",
-    "\n",
-    "pca = PCA(15)\n",
-    "pca.fit_transform(all_the_data_array)\n",
-    "explained_variance = pca.explained_variance_ratio_\n",
-    "\n",
-    "var=np.cumsum(np.round(explained_variance, decimals=3)*100)\n",
-    "plt.plot(var, label='all')\n",
-    "for i in range(15):\n",
-    "    plt.axvline(x=i, alpha=0.2, color=\"grey\")\n",
-    "\n",
-    "plt.legend()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pca = PCA(3)\n",
-    "pca.fit_transform(all_the_data_array)\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "ax = Axes3D(fig)\n",
-    "\n",
-    "measurements_grouped_by_label = {}\n",
-    "colors = ['xkcd:green','xkcd:blue','xkcd:brown','xkcd:yellow','xkcd:black','xkcd:grey','xkcd:violet','xkcd:orange','xkcd:red']\n",
-    "\n",
-    "groups = np.unique(functionalisations)\n",
-    "y_pos = np.arange(len(groups))\n",
-    "\n",
-    "for ts in measurements:\n",
-    "    if measurements[ts]['label'] not in measurements_grouped_by_label:\n",
-    "        measurements_grouped_by_label[measurements[ts]['label']] = {}\n",
-    "    measurements_grouped_by_label[measurements[ts]['label']][ts] = measurements[ts]\n",
-    "\n",
-    "count = 0\n",
-    "for label in measurements_grouped_by_label:\n",
-    "    xs = []\n",
-    "    ys = []\n",
-    "    zs = []\n",
-    "    \n",
-    "    for ts in measurements_grouped_by_label[label]:\n",
-    "        tmp = pca.transform(measurements_grouped_by_label[label][ts]['avgs'].reshape(1, -1))\n",
-    "        x,y,z = tmp[0]\n",
-    "        xs.append(x)\n",
-    "        ys.append(y)\n",
-    "        zs.append(z)\n",
-    "    \n",
-    "    ax.scatter(xs, ys, zs, color=colors[count], label=label)\n",
-    "    count+=1\n",
-    "    \n",
-    "plt.legend()\n",
-    "plt.show()\n",
-    "      "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pca = PCA(2)\n",
-    "pca.fit_transform(all_the_data_array)\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "\n",
-    "measurements_grouped_by_label = {}\n",
-    "colors = ['xkcd:green','xkcd:blue','xkcd:brown','xkcd:yellow','xkcd:black','xkcd:grey','xkcd:violet','xkcd:orange','xkcd:red']\n",
-    "\n",
-    "groups = np.unique(functionalisations)\n",
-    "y_pos = np.arange(len(groups))\n",
-    "\n",
-    "for ts in measurements:\n",
-    "    if measurements[ts]['label'] not in measurements_grouped_by_label:\n",
-    "        measurements_grouped_by_label[measurements[ts]['label']] = {}\n",
-    "    measurements_grouped_by_label[measurements[ts]['label']][ts] = measurements[ts]\n",
-    "\n",
-    "count = 0\n",
-    "for label in measurements_grouped_by_label:\n",
-    "    xs = []\n",
-    "    ys = []\n",
-    "    \n",
-    "    for ts in measurements_grouped_by_label[label]:\n",
-    "        tmp = pca.transform(measurements_grouped_by_label[label][ts]['avgs'].reshape(1, -1))\n",
-    "        x,y = tmp[0]\n",
-    "        xs.append(x)\n",
-    "        ys.append(y)\n",
-    "    \n",
-    "    ax.scatter(xs, ys, color=colors[count], label=label)\n",
-    "    count+=1\n",
-    "    \n",
-    "plt.legend()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# tSNE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 2 3 4 5 6 7 8]]\n",
-      "[2 7]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "a = [1,2,3,4,5,6,7,8]\n",
-    "a = np.array(a)\n",
-    "b = [0,1,0,0,0,0,1,0]\n",
-    "b = np.array(b)\n",
-    "c = [False,True,False,False,False,False,True,False]\n",
-    "print(a[b.astype(bool)])\n",
-    "print(a[c])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1150,6 +971,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.7"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
