Rename online_reader.py module

--- a/notebooks/onlinereader_test.ipynb
+++ b/notebooks/onlinereader_test.ipynb
@@ -22,7 +22,7 @@
     "from e_nose import data_processing as dp\n",
     "from e_nose import data_visualization\n",
     "from e_nose.measurements import Measurement, StandardizationType\n",
-    "from e_nose.onlineReader import OnlineReader\n",
+    "from e_nose.online_reader import OnlineReader\n",
     "import numpy as np\n",
     "\n",
     "%reload_ext autoreload\n",
