--- a/notebooks/dataloader_test.ipynb
+++ b/notebooks/dataloader_test.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading file ../../../data/newgen-test/NewGeneration/data_apple_juice_coffee_powder_red_Wine_wodka_orange_juice_raisin_3_loops_for_5.0_min_referenceTime_30.0_min_2020-2-19_8_8.csv\n",
-      "using sensor 5 specification\n",
       "Reading file ../../../data/newgen-test/NewGeneration/data_apple_juice_coffee_powder_red_Wine_wodka_orange_juice_raisin_8_loops_for_5.0_min_referenceTime_30.0_min_2020-2-17_22_33.csv\n",
       "using sensor 5 specification\n",
       "Reading file ../../../data/newgen-test/NewGeneration/data_apple_juice_coffee_powder_red_Wine_wodka_orange_juice_raisin_8_loops_for_5.0_min_referenceTime_30.0_min_2020-2-18_7_14.csv\n",
@@ -52,7 +50,7 @@
       "using sensor 5 specification\n",
       "Reading file ../../../data/newgen-test/NewGeneration/data_raisin_coffee_powder_orange_juice_red_wine_isopropanol_wodka_10_loops_for_5.0_min_referenceTime_5.0_min_2020-3-3_9_53.csv\n",
       "using sensor 5 specification\n",
-      "Read 8 files\n"
+      "Read 7 files\n"
      ]
     }
    ],
@@ -67,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,26 +76,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "file:  ../../../data/newgen-test/NewGeneration/data_apple_juice_coffee_powder_red_Wine_wodka_orange_juice_raisin_3_loops_for_5.0_min_referenceTime_30.0_min_2020-2-19_8_8.csv\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Unknown standardization type",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-36-e81a55d357c8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0madding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmeasurements_per_file\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0madding\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0madding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstandardize_measurements\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0madding\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mStandardizationType\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLOWPASS_FILTER\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mmeasurements\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0madding\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/run/media/daniel/Windows/Users/Daniel/TUM/Kurse/2019 WS/Roboy Student Team/GIT~/roboy_smells/e_nose/data_processing.py\u001b[0m in \u001b[0;36mstandardize_measurements\u001b[0;34m(measurements, type, remove_ref)\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mclean_measurements\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Unknown standardization type'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Unknown standardization type"
+      "file:  ../../../data/newgen-test/NewGeneration/data_apple_juice_coffee_powder_red_Wine_wodka_orange_juice_raisin_8_loops_for_5.0_min_referenceTime_30.0_min_2020-2-17_22_33.csv\n",
+      "file:  ../../../data/newgen-test/NewGeneration/data_apple_juice_coffee_powder_red_Wine_wodka_orange_juice_raisin_8_loops_for_5.0_min_referenceTime_30.0_min_2020-2-18_7_14.csv\n",
+      "file:  ../../../data/newgen-test/NewGeneration/data_coffee_powder_orange_juice_isopropanol_raisin_red_Wine_wodka_10_loops_for_5.0_min_referenceTime_30.0_min_2020-2-28_7_57.csv\n",
+      "file:  ../../../data/newgen-test/NewGeneration/data_isopropanol_raisin_apple_juice_wodka_coffee_powder_red_Wine_2_loops_for_5.0_min_referenceTime_30.0_min_2020-2-15_13_24.csv\n",
+      "file:  ../../../data/newgen-test/NewGeneration/data_isopropanol_raisin_apple_juice_wodka_coffee_powder_red_Wine_5_loops_for_5.0_min_referenceTime_30.0_min_2020-2-15_23_37.csv\n",
+      "file:  ../../../data/newgen-test/NewGeneration/data_raisin_coffee_powder_orange_juice_red_wine_isopropanol_wodka_10_loops_for_5.0_min_referenceTime_5.0_min_2020-3-2_18_14.csv\n",
+      "file:  ../../../data/newgen-test/NewGeneration/data_raisin_coffee_powder_orange_juice_red_wine_isopropanol_wodka_10_loops_for_5.0_min_referenceTime_5.0_min_2020-3-3_9_53.csv\n",
+      "226\n"
      ]
     }
    ],
@@ -115,7 +108,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'apple_juice': 12,\n",
+       " 'coffee_powder': 42,\n",
+       " 'red_Wine': 21,\n",
+       " 'wodka': 34,\n",
+       " 'orange_juice': 29,\n",
+       " 'raisin': 44,\n",
+       " 'isopropanol': 31,\n",
+       " 'red_wine': 13}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dp.count_measurements_by_label(measurements)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reducing all labels to 12 measurements each to make sure they are balanced...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'apple_juice': 12,\n",
+       " 'coffee_powder': 12,\n",
+       " 'red_Wine': 12,\n",
+       " 'wodka': 12,\n",
+       " 'orange_juice': 12,\n",
+       " 'raisin': 12,\n",
+       " 'isopropanol': 12,\n",
+       " 'red_wine': 12}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "balanced_measurements = dp.balance_measurements_by_label(measurements)\n",
+    "dp.count_measurements_by_label(balanced_measurements)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,28 +181,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Standardized\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-37-d406485c7cb9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Standardized'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmeasurements\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m40\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstandardize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Not'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmeasurements\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m40\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstandardize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Diff'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Standardized')\n",
     "print(measurements[40].get_data(standardize=True))\n",
