Functions for automatically detecting failed channels in all files

--- a/notebooks/check-data-quality.ipynb
+++ b/notebooks/check-data-quality.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_tuple = file_reader.read_all_files_in_folder('../../../data/newgen-test/NewGeneration')\n",
+    "data_tuple = file_reader.read_all_files_in_folder('../../../data/newgen-test/NewGeneration/for_training')\n",
     "#data_tuple = dp.remove_broken_channels_multi_files(data_tuple)\n",
     "functionalisations, working_channels, all_data = data_tuple"
    ]
@@ -61,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "data_visualization.draw_all_channel_data_as_line(all_data, functionalisations, secondary='temperature')"
+    "data_visualization.draw_all_channel_data_as_line(all_data, functionalisations, 0, -1, secondary='temperature')"
    ]
   },
   {
@@ -69,7 +69,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "working_channels = dp.find_broken_channels_multi_files(functionalisations, all_data)"
+   ]
   },
   {
    "cell_type": "code",
@@ -119,7 +121,7 @@
    "source": [
     "channels = np.where(possibly_broken)[0]\n",
     "\n",
-    "data_visualization.draw_selected_channel_data_as_line(all_data, functionalisations, channels, secondary='gas')"
+    "data_visualization.draw_selected_channel_data_as_line(all_data, functionalisations, channels, 0, -1, secondary='pressure')"
    ]
   }
  ],
