--- a/notebooks/dataloader_test.ipynb
+++ b/notebooks/dataloader_test.ipynb
@@ -106,9 +106,8 @@
        " 'orange_juice': 24,\n",
        " 'isopropanol': 21,\n",
        " 'raisin': 30,\n",
-       " 'red_Wine': 8,\n",
-       " 'wodka': 19,\n",
-       " 'red_wine': 10}"
+       " 'red_wine': 18,\n",
+       " 'wodka': 19}"
       ]
      },
      "execution_count": 6,
@@ -129,19 +128,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reducing all labels to 8 measurements each to make sure they are balanced...\n"
+      "Reducing all labels to 18 measurements each to make sure they are balanced...\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'coffee_powder': 8,\n",
-       " 'orange_juice': 8,\n",
-       " 'isopropanol': 8,\n",
-       " 'raisin': 8,\n",
-       " 'red_Wine': 8,\n",
-       " 'wodka': 8,\n",
-       " 'red_wine': 8}"
+       "{'coffee_powder': 18,\n",
+       " 'orange_juice': 18,\n",
+       " 'isopropanol': 18,\n",
+       " 'raisin': 18,\n",
+       " 'red_wine': 18,\n",
+       " 'wodka': 18}"
       ]
      },
      "execution_count": 7,
